refactor on auth controller, auth services