@@ -1,4 +1,4 @@
-package  com.example.shopee.exception;
+package com.example.shopee.exception;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -9,6 +9,6 @@ public class TokenRefreshException extends RuntimeException {
   private static final long serialVersionUID = 1L;
 
   public TokenRefreshException(String token, String message) {
-    super("Failed for [%s]: %s".formatted(token, message));
+    super(String.format("Failed for [%s]: %s", token, message));
   }
 }
